Added search bar, bug fix, login fix and layout update

--- a/android-grow-up-main/app/src/main/res/values/strings.xml
+++ b/android-grow-up-main/app/src/main/res/values/strings.xml
@@ -1,4 +1,11 @@
 <resources>
     <string name="app_name">LessonsApp</string>
     <string name="texto">Lorem Ipsum</string>
+    <string name="user_name_label">Nome de Usuário</string>
+    <string name="user_name_hint">Digite seu nome de usuário</string>
+    <string name="password_label">Senha</string>
+    <string name="password_hint">Digite sua senha</string>
+    <string name="login_button">Entrar</string>
+    <string name="signup_text">Cadastre-se</string>
+    <string name="search_hint">Buscar</string>
 </resources>
